# kursovaya_3_osnovy_backend

./: .gitignore  README.md  main.py  pyproject.toml  requiarements.txt  test_utils.py  utils.py
test/: test_utils.py
tests/: conftest.py  test_utils.py
